--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ t:
       - name: 'Partners'
         url: '#partners'
       - name: 'Intro'
-        url:  'intro.syzygy.ca'
+        url:  'http://intro.syzygy.ca'
     fr:
       - name: 'À propos'
         url: '#about'
