restoring menu selector back
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ t:
         url: '#about'
       - name: 'Partners'
         url: '#partners'
+      - name: 'Hubs'
+        url: '#hubs'
       - name: 'Intro'
         url:  'http://intro.syzygy.ca'
     fr:
@@ -24,8 +26,13 @@ t:
         url: '#about'
       - name: 'Partenaires'
         url: '#partners'
+      - name: 'Hubs'
+        url: '#hubs'
       - name: 'Ouverture de session'
         url: 'http://intro.syzygy.ca'
+    button:
+      en: 'Launch'
+      fr: 'Lancer'
   header:
     heading:
       en: "Launch Jupyter at your university, school or company?"
