--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ t:
     en:
       - name: 'About'
         url: '#about'
+      - name: 'Map'
+        url: '#gmap-holder'
       - name: 'Partners'
         url: '#partners'
       - name: 'Intro'
@@ -22,6 +24,8 @@ t:
     fr:
       - name: 'À propos'
         url: '#about'
+      - name: 'Map'
+        url: '#gmap-holder'
       - name: 'Partenaires'
         url: '#partners'
       - name: 'Ouverture de session'
