Updating translation to include map
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,20 @@ t:
       button:
         en: "Send"
         fr: "Envoyer"
+  map:
+    title:
+      en: "Our Network"
+      fr: "Notre réseau"
+    stats:
+      users:
+        en: 34000+ Users
+        fr: 34000+ Utilisateurs
+      institutions:
+        en: 25+ Institutions
+        fr: 25+ Institutions
+      provinces:
+        en: 7 &#127464;&#127462; Provinces, 1 &#127482;&#127480; State
+        fr: 7 &#127464;&#127462; Provinces, 1 &#127482;&#127480; État
   about:
     what:
       en: 'What is Jupyter?'
